2006-09-07 Howard Butler <hobu@hobu.net>
    * GEOSEnvelope wasn't in the PROTOTYPES section in geos_c.cpp

2006-09-07 Sandro Santilli <strk@refractions.net>

	* source/operation/distance/DistanceOp.cpp (computeMinDistancePoints):
	  fixed invalid reference.
	* autogen.sh: don't giveup on automake failures (testing)

2006-09-06 Sandro Santilli <strk@refractions.net>

	* tests/unit/operation/overlay/OffsetPointGeneratorTest.cpp
	  tests/unit/Makefile.am: new test for OffsetPointGenerator class
	* tests/unit/operation/overlay/FuzzyPointLocatorTest.cpp,
	  tests/unit/Makefile.am: new test for FuzzyPointLocator class

2006-09-06 Mateusz Loskot <mateusz@loskot.net>

	* source/operation/overlay/OverlayResultValidator.cpp,
	  source/operation/overlay/OffsetPointGenerator.cpp,
	  source/headers/geos/operation/overlay/OffsetPointGenerator.h,
	  source/headers/geos/operation/overlay/OverlayResultValidator.h:
	  Set svn:keyword property for $Id$ expansion.

2006-09-06 Sandro Santilli <strk@refractions.net>

	* tests/unit/precision/GeometrySnapperTest.cpp: 
	  updated after GeometrySnapper interface change.
	* source/operation/overlay/FuzzyPointLocator.cpp,
	  source/operation/overlay/OverlayResultValidator.cpp,
	  source/operation/overlay/OffsetPointGenerator.cpp,
	  source/operation/overlay/Makefile.am,
	  source/headers/geos/operation/overlay/OffsetPointGenerator.h,
	  source/headers/geos/operation/overlay/Makefile.am,
	  source/headers/geos/operation/overlay/FuzzyPointLocator.h,
	  source/headers/geos/operation/overlay/OverlayResultValidator.h:
	  Rest of Overlay validation classes.

2006-09-06 Mateusz Loskot <mateusz@loskot.net>

	* All files of following types: .c .cpp .h .i .in .inl
	.m .mk .py .vc: set svn:keyword property for $Id$ keyword
	expansion.

2006-09-06 Sandro Santilli <strk@refractions.net>

	* source/operation/overlay/FuzzyPointLocator.cpp,
	  source/headers/geos/operation/overlay/FuzzyPointLocator.h:
	  new helper class for Overlay op validation.
